--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -317,7 +317,7 @@ h4{
 }
 
 /*header-styling*/
-.hight70{
+.height70{
     height: 70px;
 }
 
@@ -327,6 +327,10 @@ h4{
 
 .navtitle-style{
     color: #5b7cff; width:200px;padding-left:16px;font-weight:700;
+}
+
+.navgap{
+    padding-right:16px;gap: 20px;
 }
 
 /*hero*/
@@ -407,6 +411,10 @@ h4{
     padding-top: 5px;
     padding-bottom: 5px;
 }
+/*diensten*/
+.dienstenblok-margin{
+    gap:20px; margin-top: 5px
+}
 
 /*proces*/
 
@@ -428,6 +436,14 @@ h4{
     list-style-type: none;
 }
 
+/*over-section*/
+
+.overblok-margin{
+    gap:20px; margin-top: 5px
+}
+.overbadge-margin{
+    margin-top: 25px;
+}
 
 /*form-blokken*/
 
@@ -470,6 +486,3 @@ h4{
     margin-bottom: 5px;
 }
 
-/*footer*/
-
-.
