--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,7 +220,7 @@
 
 /*styling*/
 .shadow-soft{
-    box-shadow:0px 10px 15px rgba(0,0,0,0.6);
+    box-shadow:0 10px 15px rgba(0,0,0,0.6);
 }
 
 /*uitlijning*/
